--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
 	"manifest_version": 2,
-	"version": "0.0.1",
+	"version": "0.0.2",
 	
 	"name": "Dota2Ru",
 	"description": "Использование сторонних смайлов для форума",
 	"content_scripts": [ {
 		"css": [ "extension.css" ],
 		"js": [ "extension.js" ],
-		"matches": [ "*://dota2.ru/forum/threads*" ]
+		"matches": [ "*://dota2.ru/forum*" ]
 	} ],
 	"icons": {
 		"128": "/assets/favicon.ico",
