--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"version": "0.0.4.5",
+	"version": "0.0.5",
 	
 	"name": "Dota2Ru",
 	"description": "Использование сторонних смайлов для форума",
@@ -10,9 +10,9 @@
 		"matches": [ "*://dota2.ru/forum*" ]
 	} ],
 	"icons": {
-		"128": "/assets/favicon.ico",
-		"16": "/assets/favicon.ico",
-		"48": "/assets/favicon.ico"
+		"128": "/assets/favicon_128.png",
+		"16": "/assets/favicon_16.png",
+		"48": "/assets/favicon_48.png"
 	},
 	"web_accessible_resources": [ "/assets/*" ]
 }
