--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
 	"content_scripts": [ {
 		"css": [ "extension.css" ],
 		"js": [ "extension.js" ],
-		"matches": [ "*://dota2.ru/forum*" ]
+		"matches": [ "*://dota2.ru/forum*" ],
+		"run_at": "document_end"
 	} ],
 	"icons": {
 		"128": "/assets/favicon_128.png",
