--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"version": "0.1.1.0",
+	"version": "0.1.1.1",
 	
-	"name": "Dota2Ru-smiles",
+	"name": "Dota2Ru-tools",
 	"description": "Использование сторонних смайлов для форума и новый чат",
 	"content_scripts": [ {
 		"css": [ "extension.css" ],
