--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 2,
-	"version": "1.0.0.2",
+	"version": "1.0.0.3",
 	
 	"name": "D2S - форумный редактор",
-	"description": "Кастомные смайлы, новый чат, редактор текста и прочее!",
+	"description": "Кастомные смайлы, новый чат, игнор, редактор текста и прочее!",
 	"content_scripts": [ {
 		"css": [ "extens.css" ],
 		"js":
